# repo

./: CMakeLists.txt  data.txt  downsampling_analysis.ods  kinfu_evaluate.py  kinfu_provider.py  labels.txt  log_evaluate.txt  pred_label.txt  source.cpp
concatenate/: CMakeLists.txt  konkatenacja.cpp
converter/: CMakeLists.txt  converter.cpp
cutting/: 2048.cpp  CMakeLists.txt
data/po pełnym pipelinie/: chair_0_centr_down_2048_rotated.pcd  chair_1_centr_down_2048_rotated.pcd  chair_2_centr_down_2048_rotated.pcd  chair_3_centr_down_2048_rotated_rotated.pcd  chair_4_centr_down_2048_rotated.pcd  chair_5_centr_down_2048_rotated.pcd  key_0_centr_down_2048_rotated.pcd  key_1_centr_down_2048_rotated.pcd  key_2_centr_down_2048_rotated.pcd  key_3_centr_down_2048_rotated.pcd  key_4_centr_down_2048_rotated.pcd  key_5_centr_down_2048_rotated.pcd  mon_0_centr_down_2048_rotated.pcd  mon_1_centr_down_2048_rotated.pcd  mon_2_centr_down_2048_rotated.pcd  mon_3_centr_down_2048_rotated.pcd  mon_4_centr_down_2048_rotated.pcd
data/przed obrobka/: chair_0.pcd  chair_1.pcd  chair_2.pcd  chair_3a.pcd  chair_3b.pcd  chair_4.pcd  chair_4a.pcd  chair_4b.pcd  chair_5a.pcd  chair_5b.pcd  cup_0.pcd  cup_1.pcd  cup_2.pcd  cup_3.pcd  cup_4.pcd  keyboard_0.pcd  keyboard_1.pcd  keyboard_2.pcd  keyboard_3.pcd  keyboard_4.pcd  keyboard_6.pcd  laptop_0.pcd  monitor_0.pcd  monitor_1.pcd  monitor_2.pcd  monitor_3.pcd  monitor_4.pcd
downsampling/: CMakeLists.txt  downsampling.cpp
